<resources>
    <string name="sync_msg">收取中…</string>
    <string name="connecting">连接中</string>
    <string name="not_connected">未连接</string>
    <string name="news_line">以下为新消息</string>
    <string name="contacts_num">共 %d 位联系人</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_dialog">退出后不会删除任何历史数据，下次登录依然可以使用本账号。</string>
    <string name="tab_msg">消息</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_me">我的</string>
    <string name="new_friends">新朋友</string>
    <string name="agree_apply">通过验证</string>
    <string name="agreed_apply">已通过</string>
    <string name="press_talk">按住说话</string>
    <string name="image">图片</string>
    <string name="card">名片</string>
    <string name="sign_read_msg">标记已读</string>
    <string name="open_channel_notice">打开通知</string>
    <string name="close_channel_notice">关闭通知</string>
    <string name="sign_unread_msg">标记未读</string>
    <string name="delete_msg">删除该聊天</string>
    <string name="remove_conver_msg">不显示该聊天</string>
    <string name="hold_to_record">手指上滑，取消发送</string>
    <string name="forward">发送给朋友</string>
    <string name="delete">删除</string>
    <string name="cancel_top">取消置顶</string>
    <string name="at_all">选择所有人</string>
    <string name="all">所有人</string>
    <string name="all_ais">所有AI</string>
    <string name="at_all_ais">选择所有AI</string>
    <string name="edit_group_notice">只有群主及管理员可以编辑</string>
    <string name="delete_group_members">删除群成员</string>
    <string name="str_transfer_owner">转让群主</string>
    <string name="str_select_new_owner">选择新群主</string>
    <string name="str_transfer_owner_confirm_tip">确定将群主转让给 %1$s 吗？转让后你将成为普通成员。</string>
    <string name="str_transfer_owner_success">群主已转让</string>
    <string name="str_transfer_owner_failed">转让群主失败</string>
    <string name="add_group_members">添加群成员</string>
    <string name="my_in_group_name">我在本群的昵称</string>
    <string name="update_in_gorup_name">设置你在群里的昵称，这个昵称只会在这个群内显示</string>
    <string name="group_name">群聊名称</string>
    <string name="group_avatar">群头像</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="group_qr">群二维码</string>
    <string name="group_card">群名片</string>
    <string name="group_announcement">群公告</string>
    <string name="delete_group">删除并退出</string>
    <string name="clear_chat_msg">清空聊天记录</string>
    <string name="msg_remind">消息免打扰</string>
    <string name="msg_top">置顶聊天</string>
    <string name="save_to_maillist">保存到通讯录</string>
    <string name="show_remark_name">显示群成员昵称</string>
    <string name="my_remark_name_in_group">我在本群的昵称</string>
    <string name="chat_info">聊天信息</string>
    <string name="choose_chat">选择会话</string>
    <string name="apply">申请加好友</string>
    <string name="applyed">已申请</string>
    <string name="hint_search">搜索(精确搜索)</string>
    <string name="choose_contacts">选择联系人</string>
    <string name="cleared">已清空</string>
    <string name="user_card">个人名片</string>
    <string name="send_msg">发消息</string>
    <string name="setting">设置</string>
    <string name="group_qr_desc">该二维码%d天内(%s)有效，重新进入将更新</string>
    <string name="fullStaffing">禁言中</string>
    <string name="start_group_chat">发起群聊</string>
    <string name="add_friends">添加好友</string>
    <string name="scan">扫 一 扫</string>
    <string name="group_qr_discontinue_use">该群已开启进群验证\n只可通过邀请进群</string>
    <string name="group_copy_invite_link">复制邀请链接</string>
    <string name="group_invite_link_copied">邀请链接已复制</string>
    <string name="find_user">查找用户：</string>
    <string name="contacts">联系人</string>
    <string name="group_chat">群聊</string>
    <string name="msg_record">聊天记录</string>
    <string name="unknown_file">未知</string>
    <string name="open_file">用其他应用打开</string>
    <string name="contian">包含:</string>
    <string name="total_search_msg_count">%d 条相关记录</string>
    <string name="apply_join_group">[进群申请]</string>
    <string name="ar_feed_sound_cancel">松手取消</string>
    <string name="new_msg_notice">新消息通知</string>
    <string name="web_login">网页端</string>
    <string name="currency">通用</string>
    <string name="saved_groups">保存的群聊</string>
    <string name="head_portrait">头像</string>
    <string name="name">名字</string>
    <string name="identity">%s号</string>
    <string name="my_qr">我的二维码</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="personal_info">个人资料</string>
    <string name="qr_desc">扫一扫上面的二维码图案，加我%s</string>
    <string name="clear_msg">清空聊天记录</string>
    <string name="clear_img_cache">清空图片缓存</string>
    <string name="version_info">版本信息</string>
    <string name="clear_img_cache_tips">确定清空图片缓存？</string>
    <string name="clear_all_msg_tips">确定清空所有聊天记录？</string>
    <string name="close_new_msg_notice_tips">关闭后，手机将不再收到新消息通知</string>
    <string name="show_notice_detail">通知显示消息详情</string>
    <string name="voice">声音</string>
    <string name="shock">震动</string>
    <string name="voice_shock_desc">在%s运行时，您可以设置是否需要声音或震动</string>
    <string name="app_idnum">%s号：</string>
    <string name="set_remark">设置备注</string>
    <string name="delete_friends">解除好友关系</string>
    <string name="push_black_list">拉入黑名单</string>
    <string name="pull_out_black_list">拉出黑名单</string>
    <string name="black_list_desc">已添加至黑名单，你将不再收到对方的消息</string>
    <string name="report">投诉</string>
    <string name="input">请输入…</string>
    <string name="single_update_id">%s号只允许修改一次</string>
    <string name="complete">完成</string>
    <string name="update_name">修改名称</string>
    <string name="update_app_id">修改%s号</string>
    <string name="delete_friends_tips">将联系人"%s"删除，同时删除与该联系人到聊天记录</string>
    <string name="join_black_list_tips">加入黑名单，你将不在收到对方的消息。</string>
    <string name="pull_out_black_list_tips">确定将该用户拉出黑名单吗？</string>
    <string name="my_app_id">我的%s号：</string>
    <string name="probably_send_img">你可能要发送的照片：</string>
    <string name="preview">预览</string>
    <string name="network_error_tips">网络异常</string>
    <string name="wk_kit_collect">收藏</string>
    <string name="unsetting">未设置</string>
    <string name="exit_group_tips">退出后不会通知群聊中其他成员，且不会再接受此群聊消息</string>
    <string name="download_open">下载并打开</string>
    <string name="online">在线</string>
    <string name="delete_select_msg">确定删除选中的消息吗？</string>
    <string name="chat_records">聊天记录</string>
    <string name="chat_title_records">%s的聊天记录</string>
    <string name="item_forward">逐条转发</string>
    <string name="merge_forward">合并转发</string>
    <string name="time_section">%s 至 %s</string>
    <string name="save">保存</string>
    <string name="is_forward">已转发</string>
    <string name="input_remark">请输入备注</string>
    <string name="send_to">发送给：</string>
    <string name="create_new_chat">新建会话</string>
    <string name="lately_chat">最近聊天</string>
    <string name="request_add_frined">请求加好友</string>
    <string name="item_forward_count">[逐条转发]共%d条消息</string>
    <string name="cannot_reply_msg">禁言中无法回复消息</string>
    <string name="cannot_edit_msg">禁言中无法编辑消息</string>
    <string name="cannot_tips_msg">无法定位到上下文</string>
    <string name="exit_logining">正在退出</string>
    <string name="chat">会话</string>
    <string name="chat_pwd">聊天密码</string>
    <string name="input_chat_pwd">请输入聊天密码</string>
    <string name="chat_pwd_error">聊天密码错误</string>
    <string name="forget_chat_pwd">聊天密码错误，您还有%d次机会。\n%d次输错聊天密码后将清空该聊天消息。如果您忘记聊天密码可以重置聊天密码。</string>
    <string name="max_select_count">最多选择%d位联系人</string>
    <string name="max_select_count_chat">最多选择%d个会话</string>
    <string name="approve_groupmember">[群成员审核]</string>
    <string name="dark_follow_system">跟随系统</string>
    <string name="dark_follow_system_desc">开启后，将跟随系统打开或关闭深色模式</string>
    <string name="dark_choose">手动选择</string>
    <string name="dark_normal">普通模式</string>
    <string name="dark_night">深色模式</string>
    <string name="dark_save_tips">新的设置需要重启%s才能生效</string>
    <string name="input_apply_remark">请输入申请备注</string>
    <string name="source_from">来源</string>
    <string name="source_from_unknown">未知</string>
    <string name="user_detail_info">资料设置</string>
    <string name="delete_conver_msg_tips">删除后，将清空该聊天的消息记录</string>
    <string name="remove_conver_msg_tips">确定不显示该聊天？</string>
    <string name="language">语言</string>
    <string name="disabled">未开启</string>
    <string name="enabled">已开启</string>
    <string name="scan_user_qr">扫描二维码名片</string>
    <string name="show_all_members">查看全部成员</string>
    <string name="show_all_members_with_count">查看全部成员 (%1$d)</string>
    <string name="group_members">群成员(%s)</string>
    <string name="last_msg_draft">[草稿]</string>
    <string name="last_msg_remind">[有人@我]</string>
    <string name="last_msg_card">[名片]</string>
    <string name="nickname">昵称：</string>
    <string name="other_is_typing">对方正在输入</string>
    <string name="user_is_typing">%s正在输入</string>
    <string name="function_desc">功能介绍</string>
    <string name="wk_file_helper">文件传输助手</string>
    <string name="function_desc_tips">登录电脑版，向我发消息，可以在手机与电脑间传输文字、图片、音频、视频 等文件。</string>
    <string name="function_system_team_tips">%s团队官方账号</string>
    <string name="group_ban">此群已被封禁</string>
    <string name="chat_msg_is_cleard">聊天消息已被清空</string>
    <string name="chat_pwd_reset_pwd">重置密码</string>
    <string name="last_msg_chat_record">[聊天记录]</string>
    <string name="no_saved_group">你可以通过群聊中的"保存到通讯录"选项，将其保存到这里</string>
    <string name="remark">备注</string>
    <string name="remark_desc">群聊的备注仅自己可见</string>
    <string name="enter_group_name">填入</string>
    <string name="create_new_group">新建群聊</string>
    <string name="font_size">字体大小</string>
    <string name="font_size_default">标准</string>
    <string name="preview_text_size">预览字体大小</string>
    <string name="change_text_size">拖动下面的滑块，可设置字体大小</string>
    <string name="set_text_size_feedback">设置后，会改变聊天、菜单和朋友圈的字体大小。如果在使用过程中存在问题或意见，可反馈给%s团队</string>
    <string name="pc_login">Web %s已登录</string>
    <string name="wk_kit_phone_notice_close">手机通知已关闭</string>
    <string name="choose_members">选择成员</string>
    <string name="video_call">视频通话</string>
    <string name="audio_call">语音通话</string>
    <string name="is_calling">正在通话中</string>
    <string name="official">官方</string>
    <string name="join_group_source">进群方式</string>
    <string name="invite_join_group">%s邀请入群</string>
    <string name="wk_encryption">加密</string>
    <string name="maillist">手机联系人</string>
    <string name="maillist_desc">添加或邀请通讯录中的朋友</string>
    <string name="invite_users">邀请用户</string>
    <string name="no_permissions_contacts">无法获取手机通讯录，请打开权限后重试</string>
    <string name="space_title">Space</string>
    <string name="space_create">创建 Space</string>
    <string name="space_join">加入 Space</string>
    <string name="space_show_all">显示全部</string>
    <string name="space_name">名称</string>
    <string name="space_description">描述</string>
    <string name="space_members">成员</string>
    <string name="space_invite">邀请成员</string>
    <string name="space_leave">离开 Space</string>
    <string name="space_disband">解散 Space</string>
    <string name="str_thread_name">子区名称</string>
    <string name="str_archive_thread">归档子区</string>
    <string name="str_thread_members">子区成员</string>
    <string name="str_creator">创建者</string>
    <string name="follow_empty_title">关注你最在意的会话</string>
    <string name="follow_empty_desc">把重要的群聊、私聊、子区集中在这里，不再被消息淹没</string>
    <string name="follow_empty_create_btn">＋ 新建分组</string>
    <string name="group_md">GROUP.md</string>
    <string name="group_md_not_configured">未配置</string>
    <string name="str_webhook_field_name">名称</string>
    <string name="str_webhook_field_avatar">头像 URL</string>
    <string name="str_webhook_name_hint">如「构建通知」「监控告警」（可留空）</string>
    <string name="str_webhook_avatar_hint">https://example.com/avatar.png</string>
    <string name="str_webhook_avatar_hint_default">留空使用默认头像。</string>
    <string name="str_webhook_member_prefix_hint">普通成员创建的 Webhook 服务端会自动加 `Webhook-` 前缀。</string>
</resources>